[gd_scene load_steps=2 format=3 uid="uid://bbr35quqxgvaa"]

[ext_resource type="Script" path="res://pong/pong-menu/pong-menu.gd" id="1_kin45"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_kin45")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.172833, 0.172833, 0.172833, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="PvC" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Player vs CPU"

[node name="PvP" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Player vs Player"

[node name="CvC" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "CPU vs CPU"

[node name="Home" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="VBoxContainer/PvC" to="." method="_on_pv_c_pressed"]
[connection signal="pressed" from="VBoxContainer/PvP" to="." method="_on_pv_p_pressed"]
[connection signal="pressed" from="VBoxContainer/CvC" to="." method="_on_cv_c_pressed"]
[connection signal="pressed" from="VBoxContainer/Home" to="." method="_on_home_pressed"]
